# src/main/java/com/nttdata/product/utils/GlobalExceptionHandler.java
@@ -1,6 +1,7 @@
 package com.nttdata.product.utils;
 
 import org.openapitools.model.BankProductResponse;
+import org.openapitools.model.TemplateResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
@@ -14,32 +15,32 @@ public class GlobalExceptionHandler {
     private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
     @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<BankProductResponse> handleIllegalArgument(IllegalArgumentException e) {
+    public ResponseEntity<TemplateResponse> handleIllegalArgument(IllegalArgumentException e) {
         log.warn("Error de validación: {}", e.getMessage());
         return ResponseEntity
                 .badRequest()
-                .body(new BankProductResponse()
+                .body(new TemplateResponse()
                         .status(400)
-                        .message(Constants.ERROR_VALIDATION_MESSAGE)
+                        .message(String.format(Constants.ERROR_VALIDATION_MESSAGE, e.getMessage()))
                         .products(null));
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<BankProductResponse> handleGeneralException(Exception e) {
+    public ResponseEntity<TemplateResponse> handleGeneralException(Exception e) {
         log.error("Error inesperado: ", e);
         return ResponseEntity
                 .status(500)
-                .body(new BankProductResponse()
+                .body(new TemplateResponse()
                         .status(500)
                         .message(Constants.ERROR_INTERNAL)
                         .products(null));
     }
 
     @ExceptionHandler(EmptyResultException.class)
-    public ResponseEntity<BankProductResponse> handleEmptyResult(EmptyResultException e) {
+    public ResponseEntity<TemplateResponse> handleEmptyResult(EmptyResultException e) {
         return ResponseEntity
                 .status(500)
-                .body(new BankProductResponse()
+                .body(new TemplateResponse()
                         .status(404)
                         .message(e.getMessage())
                         .products(null));
