# src/main/resources/openapi/product-service-openapi.yaml
@@ -19,7 +19,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BankProductResponse'
+                $ref: '#/components/schemas/TemplateResponse'
 
     post:
       summary: Crear un nuevo producto bancario
@@ -37,7 +37,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BankProductResponse'
+                $ref: '#/components/schemas/TemplateResponse'
 
   /products/{id}:
     get:
@@ -57,7 +57,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BankProductResponse'
+                $ref: '#/components/schemas/TemplateResponse'
 
     put:
       summary: Actualizar un producto bancario
@@ -82,7 +82,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BankProductResponse'
+                $ref: '#/components/schemas/TemplateResponse'
 
     delete:
       summary: Eliminar un producto bancario
@@ -101,7 +101,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BankProductResponse'
+                $ref: '#/components/schemas/TemplateResponse'
 
 components:
   schemas:
@@ -158,6 +158,61 @@ components:
 
     BankProductResponse:
       type: object
+      properties:
+        id:
+          type: string
+          description: ID del producto
+          example: id1234
+        customerId:
+          type: string
+          description: ID del cliente asociado al producto
+          example: cust1234
+        type:
+          type: string
+          description: Tipo de producto bancario
+          example: "[ AHORRO, CORRIENTE, PLAZO_FIJO, CREDITO_PERSONAL, CREDITO_EMPRESARIAL, TARJETA_CREDITO ]"
+        name:
+          type: string
+          description: Nombre descriptivo del producto
+          example: Cuenta Ahorro Soles
+        balance:
+          type: number
+          format: decimal
+          description: Saldo actual del producto
+          example: 1000.50
+        maintenanceFee:
+          type: number
+          format: double
+          description: Monto de la comisión de mantenimiento
+          example: 5.00
+        monthlyLimit:
+          type: integer
+          description: Límite mensual de movimientos permitidos
+          example: 5
+        creditLimit:
+          type: number
+          format: decimal
+          description: Límite de crédito para tarjetas
+          example: 5000.00
+        holders:
+          type: array
+          description: Titulares de la cuenta empresarial
+          items:
+            type: string
+          example: [ "12345678", "87654321" ]
+        signers:
+          type: array
+          description: Firmantes autorizados
+          items:
+            type: string
+          example: [ "99887766" ]
+        allowedTransactionDay:
+          type: integer
+          description: Dia de operacion permitido
+          example: 5
+
+    TemplateResponse:
+      type: object
       description: Respuesta procesada
       properties:
         status:
@@ -172,4 +227,4 @@ components:
           type: array
           description: Lista de productos bancarios
           items:
-            $ref: '#/components/schemas/BankProductBody'
+            $ref: '#/components/schemas/BankProductResponse'
